chore: update to latest

--- a/config/fcitx5/conf/pinyin.conf
+++ b/config/fcitx5/conf/pinyin.conf
@@ -19,7 +19,7 @@ CloudPinyinIndex=2
 # Show animation when Cloud Pinyin is loading
 CloudPinyinAnimation=True
 # Always show Cloud Pinyin place holder
-KeepCloudPinyinPlaceHolder=False
+KeepCloudPinyinPlaceHolder=True
 # Preedit Mode
 PreeditMode="Composing pinyin"
 # Fix embedded preedit cursor at the beginning of the preedit
@@ -43,7 +43,7 @@ BackSpaceToUnselect=True
 # Number of Sentences
 Number of sentence=1
 # Prompt long word length when input length over (0 for disable)
-LongWordLengthLimit=6
+LongWordLengthLimit=4
 # Key to trigger quickphrase
 QuickPhraseKey=semicolon
 # Use V to trigger quickphrase
@@ -70,6 +70,20 @@ FirstRun=False
 [NextCandidate]
 0=Tab
 
+[CurrentCandidate]
+0=space
+1=KP_Space
+
+[CommitRawInput]
+0=Return
+1=KP_Enter
+2=Control+Return
+3=Control+KP_Enter
+4=Shift+Return
+5=Shift+KP_Enter
+6=Control+Shift+Return
+7=Control+Shift+KP_Enter
+
 [ChooseCharFromPhrase]
 0=bracketleft
 1=bracketright
@@ -93,7 +107,7 @@ FirstRun=False
 # ue -> ve
 VE_UE=False
 # Common Typo
-NG_GN=False
+NG_GN=True
 # Inner Segment (xian -> xi'an)
 Inner=True
 # Inner Segment for Short Pinyin (qie -> qi'e)
@@ -121,11 +135,11 @@ C_CH=True
 # f <-> h
 F_H=False
 # l <-> n
-L_N=True
+L_N=False
 # s <-> sh
 S_SH=True
 # z <-> zh
 Z_ZH=True
 # Correction Layout
-Correction=None
+Correction=QWERTY
 
