--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -63,7 +63,7 @@
       <string>Microsoft YaHei</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>sans-serif</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
 </match>
 
