--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -1,19 +1,19 @@
 [Hotkey]
-# Enumerate when press trigger key repeatedly
+# 反复按切换键时进行轮换
 EnumerateWithTriggerKeys=True
-# Temporally switch between first and current Input Method
+# 临时在当前和第一个输入法之间切换
 AltTriggerKeys=
-# Enumerate Input Method Forward
+# 向前切换输入法
 EnumerateForwardKeys=
-# Enumerate Input Method Backward
+# 向后切换输入法
 EnumerateBackwardKeys=
-# Skip first input method while enumerating
+# 轮换输入法时跳过第一个输入法
 EnumerateSkipFirst=False
-# Activate Input Method
+# 激活输入法
 ActivateKeys=
-# Deactivate Input Method
+# 取消激活输入法
 DeactivateKeys=
-# Toggle embedded preedit
+# 切换是否使用嵌入预编辑
 TogglePreedit=
 
 [Hotkey/TriggerKeys]
@@ -38,37 +38,37 @@ TogglePreedit=
 0=Tab
 
 [Behavior]
-# Active By Default
+# 默认状态为激活
 ActiveByDefault=False
-# Reset state on Focus In
+# 重新聚焦时重置状态
 resetStateWhenFocusIn=No
-# Share Input State
+# 共享输入状态
 ShareInputState=Program
-# Show preedit in application
+# 在程序中显示预编辑文本
 PreeditEnabledByDefault=True
-# Show Input Method Information when switch input method
+# 切换输入法时显示输入法信息
 ShowInputMethodInformation=True
-# Show Input Method Information when changing focus
+# 在焦点更改时显示输入法信息
 showInputMethodInformationWhenFocusIn=False
-# Show compact input method information
+# 显示紧凑的输入法信息
 CompactInputMethodInformation=True
-# Show first input method information
+# 显示第一个输入法的信息
 ShowFirstInputMethodInformation=True
-# Default page size
+# 默认页大小
 DefaultPageSize=5
-# Override Xkb Option
+# 覆盖 Xkb 选项
 OverrideXkbOption=False
-# Custom Xkb Option
+# 自定义 Xkb 选项
 CustomXkbOption=
 # Force Enabled Addons
 EnabledAddons=
 # Preload input method to be used by default
 PreloadInputMethod=True
-# Allow input method in the password field
+# 允许在密码框中使用输入法
 AllowInputMethodForPassword=False
-# Show preedit text when typing password
+# 输入密码时显示预编辑文本
 ShowPreeditForPassword=False
-# Interval of saving user data in minutes
+# 保存用户数据的时间间隔（以分钟为单位）
 AutoSavePeriod=30
 
 [Behavior/DisabledAddons]
