chore(fontconfig): 适配中文环境, 优化默认字体

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -1,84 +1,76 @@
-<?xml version='1.0'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
- <!-- Rendering options -->
- <match target="font">
-  <edit mode="assign" name="autohint">
-   <bool>false</bool>
-  </edit>
-  <edit mode="assign" name="hinting">
-   <bool>true</bool>
-  </edit>
-  <edit mode="assign" name="hintstyle">
-   <const>hintslight</const>
-  </edit>
-  <edit mode="assign" name="antialias">
-   <bool>true</bool>
-  </edit>
-  <edit mode="assign" name="lcdfilter">
-   <const>lcddefault</const>
-  </edit>
-  <edit mode="assign" name="rgba">
-   <const>rgb</const>
-  </edit>
- </match>
-
- <!-- Default system-ui fonts -->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>system-ui</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>sans-serif</string>
-  </edit>
- </match>
-
- <!-- Default sans-serif fonts-->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>sans-serif</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>Noto Sans CJK SC</string>
-   <string>Noto Sans</string>
-   <string>Twemoji</string>
-  </edit>
- </match>
-
- <!-- Default serif fonts-->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>serif</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>Noto Serif CJK SC</string>
-   <string>Noto Serif</string>
-   <string>Twemoji</string>
-  </edit>
- </match>
-
- <!-- Default monospace fonts-->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>monospace</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>JetBrains Mono</string>
-   <string>Symbols Nerd Font</string>
-   <string>Twemoji</string>
-  </edit>
- </match>
-
- <match target="pattern">
-  <test compare="contains" name="family">
-   <string>Twemoji mozilla</string>
-  </test>
-  <edit binding="strong" name="family">
-   <string>Twemoji</string>
-  </edit>
- </match>
-
- <dir>~/.local/share/fonts</dir>
- <dir>~/.fonts</dir>
+	<dir>~/.local/share/fonts</dir>
+	<dir>~/.fonts</dir>
+	<!-- Rendering options -->
+	<match target="font">
+		<edit mode="assign" name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit mode="assign" name="hinting">
+			<bool>true</bool>
+		</edit>
+		<edit mode="assign" name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+		<edit mode="assign" name="antialias">
+			<bool>true</bool>
+		</edit>
+		<edit mode="assign" name="lcdfilter">
+			<const>lcddefault</const>
+		</edit>
+		<edit mode="assign" name="rgba">
+			<const>rgb</const>
+		</edit>
+	</match>
+	<!-- Default system-ui fonts -->
+	<match target="pattern">
+		<test name="family" qual="any">
+			<string>system-ui</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>sans-serif</string>
+		</edit>
+	</match>
+	<!-- Default sans-serif fonts-->
+	<match target="pattern">
+		<test name="family" qual="any">
+			<string>sans-serif</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Sans</string>
+			<string>Twemoji</string>
+		</edit>
+	</match>
+	<!-- Default serif fonts-->
+	<match target="pattern">
+		<test name="family" qual="any">
+			<string>serif</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Serif</string>
+			<string>Twemoji</string>
+		</edit>
+	</match>
+	<!-- Default monospace fonts-->
+	<match target="pattern">
+		<test name="family" qual="any">
+			<string>monospace</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>JetBrains Mono</string>
+			<string>Symbols Nerd Font Mono</string>
+			<string>Twemoji</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test compare="contains" name="family">
+			<string>Twemoji mozilla</string>
+		</test>
+		<edit binding="strong" name="family">
+			<string>Twemoji</string>
+		</edit>
+	</match>
 </fontconfig>
 <!-- vim: set ft=xml fdm=marker: -->
