--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -1,87 +1,90 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-
-<match target="pattern">
-    <test name="family">
-      <string>Simsun</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans CJK SC</string>
-    </edit>
-</match>
-
-  <match target="pattern">
-    <test name="family">
-      <string>Liberation Mono</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>DejaVu Sans Mono</string>
-      <string>Noto Sans CJK SC</string>
-    </edit>
-  </match>
-
-<match target="pattern">
-    <test name="family">
-      <string>Arial</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans CJK SC</string>
-    </edit>
-  </match>
-
-<match target="pattern">
-    <test name="family">
-      <string>WenQuanYi Zen Hei</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>文泉驿正黑</string>
-      <string>Noto Sans CJK SC</string>
-    </edit>
-</match>
-
-<match target="pattern">
-    <test name="family">
-      <string>PingFang SC</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans CJK SC</string>
-    </edit>
-</match>
-
-<match target="pattern">
-    <test name="family">
-      <string>微软雅黑</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Noto Sans CJK SC</string>
-    </edit>
-</match>
-
-<match target="pattern">
-    <test name="family">
-      <string>Microsoft YaHei</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Noto Sans CJK SC</string>
-    </edit>
-</match>
-
-<!-- Rime 不显示 emoji -->
-<!-- https://gitlab.freedesktop.org/cairo/cairo/-/issues/280 -->
-<match target="font">
-		<test name="family" compare="contains">
+	<match target="pattern">
+		<test name="family">
+			<string>Simsun</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test name="family">
+			<string>Liberation Mono</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>DejaVu Sans Mono</string>
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test name="family">
+			<string>Arial</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test name="family">
+			<string>WenQuanYi Zen Hei</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>文泉驿正黑</string>
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test name="family">
+			<string>PingFang SC</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test name="family">
+			<string>微软雅黑</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test name="family">
+			<string>Microsoft YaHei</string>
+		</test>
+		<edit binding="strong" mode="prepend" name="family">
+			<string>Noto Sans CJK SC</string>
+		</edit>
+	</match>
+	<!-- alacritty -->
+	<match target="font">
+		<test compare="eq" name="prgname">
+			<string>alacritty</string>
+		</test>
+		<test compare="eq" name="family">
+			<string>Symbols Nerd Font</string>
+		</test>
+		<edit mode="assign" name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<!-- Rhyme 不显示 emoji -->
+	<!-- https://gitlab.freedesktop.org/cairo/cairo/-/issues/280 -->
+	<match target="font">
+		<test compare="contains" name="family">
 			<string>Emoji</string>
 		</test>
-		<edit name="hinting" mode="assign">
+		<edit mode="assign" name="hinting">
 			<bool>true</bool>
 		</edit>
-		<edit name="hintstyle" mode="assign">
+		<edit mode="assign" name="hintstyle">
 			<const>hintslight</const>
 		</edit>
-		<edit name="embeddedbitmap" mode="assign">
+		<edit mode="assign" name="embeddedbitmap">
 			<bool>true</bool>
 		</edit>
 	</match>
-
 </fontconfig>
