chore(sway): update to latest

--- a/config/sway/conf.d/bind.conf
+++ b/config/sway/conf.d/bind.conf
@@ -3,7 +3,7 @@
 bindgesture swipe:3:right workspace prev
 bindgesture swipe:3:left workspace next
 
-# fullscreen
+# Fullscreen
 bindsym F11 fullscreen toggle
 
 # Use wev can get key name;
@@ -18,8 +18,7 @@ bindsym $MOD+P sticky toggle
 # Kill focused window
 bindsym $MOD+Q kill
 bindsym Alt+F4 kill
-# Reload the configuration file
-# bindsym $MOD+Shift+R reload
+
 # Move the currently focused window to the scratchpad
 bindsym $MOD+Shift+minus move window scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
@@ -29,9 +28,9 @@ bindsym $MOD+minus scratchpad show
 bindsym $MOD+L exec swaylock
 
 # pot-app
-bindsym --no-repeat $MOD+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
-bindsym --no-repeat $MOD+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
-bindsym --no-repeat $MOD+Z exec curl "127.0.0.1:60828/selection_translate"
+# bindsym --no-repeat $MOD+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
+# bindsym --no-repeat $MOD+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
+# bindsym --no-repeat Ctrl+Shift+C exec curl "127.0.0.1:60828/selection_translate"
 
 # system apps
 bindsym --no-repeat Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" --class "org.kde.plasma-systemmonitor" -e $TOP
@@ -49,10 +48,14 @@ bindsym --no-repeat $MOD+R exec fuzzel
 # screenshot
 bindsym --no-repeat $MOD+X exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
 bindsym --no-repeat $MOD+Shift+X exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+bindsym --no-repeat Alt+F1 exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
 
 # screenrec
 bindsym $MOD+ESCape exec 'pkill wf-recorder && waybar-signal recorder'
 bindsym --no-repeat $MOD+S exec recorder
+
+# clipboard
+# TODO: need clipboard manager to replace copyq
 bindsym --no-repeat $MOD+V exec copyq toggle
 
 # Keyboard Control Function
