--- a/config/sway/conf.d/exec.conf
+++ b/config/sway/conf.d/exec.conf
@@ -2,10 +2,9 @@
 exec /usr/lib/polkit-kde-authentication-agent-1
 
 exec_always wm-gsetting
-exec_always wm-idle
-exec_always wm-xdg
-exec_always swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
+exec_always swaybg -i $HOME/Pictures/wallpapers/1.jpg -m fill
 exec_always env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 exec_always kanshi
+exec_always clight
 exec xsettingsd
 # vim: set ft=swayconfig noet:
