--- a/config/sway/conf.d/for_window.conf
+++ b/config/sway/conf.d/for_window.conf
@@ -1,8 +1,8 @@
 ### Windowrule
 
 # Inhibit Idle if a window is fullscreen
-for_window [class="^.*"] inhibit_idle fullscreen
 for_window [app_id="^.*"] inhibit_idle fullscreen
+for_window [class="^.*"] inhibit_idle fullscreen
 
 # Special rules for X11, wayland not supported `window_role`
 for_window [window_role = "task_dialog"] floating enable
@@ -14,6 +14,7 @@ for_window [window_type = "menu"] floating enable
 
 # Floating Apps
 for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
+for_window [app_id="org.freedesktop.impl.portal.desktop.kde"] floating enable
 for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
 for_window [app_id="com.github.wwmm.easyeffects"] floating enable
 for_window [app_id="org.fcitx.fcitx5-config-qt"] floating enable
@@ -21,6 +22,7 @@ for_window [app_id="org.wireshark.Wireshark"] floating enable
 for_window [app_id="com.obsproject.Studio"] floating enable
 for_window [app_id="org.telegram.desktop"] floating enable
 for_window [app_id="org.pipewire.Helvum"] floating enable
+for_window [app_id="btrfs-assistant"] floating enable
 for_window [app_id="dev.warp.Warp"] floating enable
 for_window [app_id="remote-viewer"] floating enable
 for_window [app_id="timeshift-gtk"] floating enable
@@ -29,18 +31,13 @@ for_window [title="^Open File$"] floating enable
 for_window [app_id="Element"] floating enable
 for_window [app_id="anki"] floating enable
 
-# Neovide
-for_window [app_id="neovide"] {
-	floating enable
-}
-
 # MPV
 for_window [app_id="mpv"] {
     floating enable
 }
 
 # JetBrains APPS
-for_window [class="^(jetbrains-.*)$" title="^(Welcome to .*)$"] {
+for_window [app_id="^(jetbrains-.*)$" title="^(Welcome to .*)$"] {
     floating enable
 }
 
@@ -51,7 +48,7 @@ for_window [app_id="Alacritty" floating] {
 # Floating System Utils
 for_window [title="^(Float Terminal|System Monitor|Explore)$"] {
     floating enable
-    resize set 70ppt
+    resize set 70ppt 70ppt
 }
 
 # Blender
@@ -100,7 +97,10 @@ for_window [app_id="pot"] {
 }
 
 # clash-verge
-for_window [app_id="clash-verge"] floating enable
+for_window [app_id="clash-verge"] {
+	floating enable
+	border none
+}
 
 # Steam
 ## 设置
@@ -109,5 +109,8 @@ for_window [class="steam" title="好友列表"] floating enable
 
 # Octave
 for_window [app_id="org.octave.Octave" title="Figure *"] floating enable
+
+# pavucontrol-qt
+for_window [app_id="pavucontrol-qt"] floating enable
 
 # vim: set ft=swayconfig noet:
