--- a/config/sway/conf.d/mode.conf
+++ b/config/sway/conf.d/mode.conf
@@ -1,4 +1,4 @@
-mode "resize" {
+mode "vim" {
     # left will shrink the containers width
     # right will grow the containers width
     # up will shrink the containers height
@@ -15,9 +15,10 @@ mode "resize" {
     bindsym Right resize grow width 10px
 
     # Return to default mode
-    bindsym Return mode "default"
+    # bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $MOD+Shift+M mode "resize"
+
+bindsym $MOD+Shift+O mode "vim"
 
 # vim: set ft=swayconfig noet:
