chore(fontconfig): 更新中文环境下的字体设置

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -59,7 +59,7 @@
 			<string>monospace</string>
 		</test>
 		<edit binding="strong" mode="prepend" name="family">
-			<string>JetBrains Mono</string>
+			<string>Noto Sans Mono CJK SC</string>
 			<string>Symbols Nerd Font Mono</string>
 			<string>Twemoji</string>
 		</edit>
