--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -117,6 +117,20 @@
 		</edit>
 	</match>
 
+	<!-- Replace english fonts-->
+	<match target="pattern">
+		<test name="prgname" compare="not_eq">
+			<string>msedge</string>
+		</test>
+		<test name="family" compare="contains">
+			<string>Noto Sans Mono CJK</string>
+		</test>
+		<edit name="family" mode="prepend" binding="strong">
+			<string>JetBrains Mono</string>
+		</edit>
+	</match>
+
+
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
