chore: 修复winsetup脚本无法找到默认配置文件

--- a/windows.conf.yaml
+++ b/windows.conf.yaml
@@ -4,9 +4,10 @@
         relink: true
         force: true
 
-- clean: ["~", "~/AppData"]
+- clean: ["~"]
 
 - link:
+    ~/.cargo/config.toml: config/cargo/config.toml
     ~/AppData/Local/nvim: config/nvim
     ~/AppData/Roaming/Rime: submodules/rime-ice
 
