--- a/windows.conf.yaml
+++ b/windows.conf.yaml
@@ -10,5 +10,8 @@
     ~/.cargo/config.toml: config/cargo/config.toml
     ~/AppData/Local/nvim: config/nvim
     ~/AppData/Roaming/Rime: submodules/rime-ice
+    ~/AppData/Roaming/Rime:
+        glob: true
+        path: local/share/fcitx5/rime/*
 
 - shell:
