--- a/config/wayfire.ini
+++ b/config/wayfire.ini
@@ -124,6 +124,7 @@ gamma = wlsunset
 idle = wm-idle
 xdg = wm-xdg
 xwayland = wm-xwayland
+kanshi = kanshi
 
 # Example configuration:
 #
@@ -149,7 +150,7 @@ binding_broswer = <super> KEY_B
 command_broswer = firefox
 
 binding_launcher = <super> KEY_R
-command_launcher = wofi --show drun
+command_launcher = fuzzel
 
 binding_clipboard = <super> KEY_V
 command_cliphoard = cliphist list | wofi --dmenu --hide-scroll | cliphist decode | wl-copy
