--- a/config/wofi/config
+++ b/config/wofi/config
@@ -4,6 +4,7 @@ lines=5
 line_wrap=word
 allow_markup=true
 always_parse_args=true
+insensitive=true
 show_all=true
 print_command=true
 layer=overlay
@@ -12,5 +13,6 @@ gtk_dark=true
 prompt=搜索
 image_size=16
 location=top
+yoffset=24
 key_expand=Tab
 matching=fuzzy
