--- a/config/cargo/config
+++ b/config/cargo/config
@@ -2,4 +2,4 @@
 replace-with = 'mirror'
 
 [source.mirror]
-registry = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"
+registry = "sparse+https://mirrors.sjtug.sjtu.edu.cn/crates.io-index/"
