--- a/config/fcitx5/conf/rime.conf
+++ b/config/fcitx5/conf/rime.conf
@@ -4,6 +4,10 @@ PreeditMode="Composing text"
 InputState="Follow Global Configuration"
 # 将嵌入式预编辑文本的光标固定在开头
 PreeditCursorPositionAtBeginning=True
-# 取消激活输入法时提交当前文本
-Commit when deactivate=False
+# 切换输入法时的行为
+SwitchInputMethodBehavior=Clear
+# 重新部署
+Deploy=
+# 同步
+Synchronize=
 
