--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,12 +1,16 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
 gtk-button-images=true
-gtk-cursor-theme-name=WhiteSur-cursors
-gtk-cursor-theme-size=48
-gtk-decoration-layout=icon:close
+gtk-cursor-theme-name=breeze_cursors
+gtk-cursor-theme-size=24
+gtk-decoration-layout=:minimize,maximize,close
 gtk-enable-animations=true
-gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=WhiteSur-dark
+gtk-font-name=Sans Serif,  10
+gtk-icon-theme-name=WhiteSur
 gtk-menu-images=true
-gtk-theme-name=WhiteSur-Dark
+gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
+gtk-primary-button-warps-slider=true
+gtk-sound-theme-name=ocean
+gtk-theme-name=Breeze
 gtk-toolbar-style=3
+gtk-xft-dpi=196608
