--- a/config/tmux/statusline.conf
+++ b/config/tmux/statusline.conf
@@ -1,35 +1,18 @@
-#!/usr/bin/env bash
+set-option -g status on                                 # enable status bar
+set -g status-interval 1                                # update status bar every sec
+set -g status-justify centre                            # center the window list
+set-option -g status-style bg=black                     # status bar colors
+set -g window-status-separator " "                      # single space window separator
+set -g status-left-length 48
+set -g status-right-length 48
 
-# TokyoNight colors for Tmux
+_tmux_win_stat_fmt='#[fg=black,bg=black]#[fg=cyan,bg=black]#{?pane_synchronized, *,}#I #W #{?pane_synchronized,* ,}#[fg=black,bg=black]'
+_tmux_win_stat_curr_fmt='#[fg=cyan,bg=black]#[fg=black,bg=cyan]#{?pane_synchronized,* ,}#I #W#{?pane_synchronized, *,} #[fg=cyan,bg=black]'
+_tmux_status_left='#[fg=black,bg=yellow] #H #[fg=yellow,bg=black]#[fg=black,bg=orange] #S #[fg=orange,bg=black]#[fg=black,bg=red] #I:#P #[fg=red,bg=black]'
+_tmux_status_right='#{?client_prefix,#[reverse]<G>#[noreverse] ,} #[fg=green,bg=black]#[fg=black,bg=green] %H:%M #[fg=black,bg=green]#[fg=yellow,bg=black]#[fg=black,bg=yellow] %a %d %b #[fg=black,bg=yellow]'
 
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#16161e"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
-
-# tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
-set -g @prefix_highlight_output_suffix ""
+set -g status-left "$_tmux_status_left"                                           # left status style and content
+set -g status-right "$_tmux_status_right"                                         # right status style and content : time and date
+set-window-option -g window-status-format "$_tmux_win_stat_fmt"                   # inactive window list style and content
+set-window-option -g window-status-current-format "$_tmux_win_stat_curr_fmt"      # active window list style and content
+set -g pane-active-border-style 'fg=red'                                          # active window border is set to a red line
