--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -6,9 +6,8 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Ctrl-g 与 nvim 冲突, 显示当前文件位置
-set -g prefix C-g
-# set-option -g prefix2 `
+set -g prefix C-a
+bind-key C-a send-prefix
 
 set -g base-index         1     # 窗口编号从 1 开始计数
 set -g display-panes-time 10000 # PREFIX-Q 显示编号的驻留时长，单位 ms
@@ -16,18 +15,22 @@ set -g mouse              on    # 开启鼠标
 set -g pane-base-index    1     # 窗格编号从 1 开始计数
 set -g renumber-windows   on    # 关掉某个窗口后，编号重排
 
-setw -g allow-rename      off   # 禁止活动进程修改窗口名
+
+set-option -g focus-events on
+set-option -sg escape-time 10
+
 setw -g automatic-rename  off   # 禁止自动命名新窗口
+setw -g allow-rename      off   # 禁止活动进程修改窗口名
 setw -g mode-keys         vi    # 进入复制模式的时候使用 vi 键位（默认是 EMACS）
 
 # Reload settings
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 # vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 # Moving window
 bind-key -n C-S-Left swap-window -t -1 \; previous-window
@@ -44,8 +47,6 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
-source ~/.config/tmux/statusline.conf
-
 # -----------------------------------------------------------------------------
 # 使用插件 - via tpm
 #   1. 执行 git clone https://github.com/tmux-plugins/tpm ~/.local/state/tmux/plugins/tpm
@@ -55,20 +56,25 @@ source ~/.config/tmux/statusline.conf
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.local/state/tmux/plugins'
 
 # 推荐的插件（请去每个插件的仓库下读一读使用教程）
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmux-plugins/tmux-pain-control'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-resurrect
 set -g @resurrect-dir '~/.local/state/tmux/resurrect'
 
+# tmux-continnum
+set -g @continuum-restore 'on'
+
 # tmux-prefix-highlight
-set -g status-right '#{prefix_highlight} %H:%M'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=white,bg=blue'
+
+source ~/.config/tmux/statusline.conf
 
 # 初始化 TPM 插件管理器 (放在配置文件的最后)
 run '~/.local/state/tmux/plugins/tpm/tpm'
