--- a/arch.conf.yaml
+++ b/arch.conf.yaml
@@ -9,50 +9,9 @@
 - link:
     ~/.Xresources: utils/.Xresources
     ~/.bashrc: utils/.bashrc
-    ~/.config/aria2: config/aria2
-    ~/.config/atuin: config/atuin
-    ~/.config/cargo: config/cargo
-    ~/.config/chrome-flags.conf: utils/chrome-flags.conf
-    ~/.config/code-flags.conf: utils/code-flags.conf
-    ~/.config/electron-flags.conf: utils/electron-flags.conf
-    ~/.config/electron25-flags.conf: utils/electron-flags.conf
-    ~/.config/environment.d: config/environment.d
-    ~/.config/fcitx5: config/fcitx5
-    ~/.config/fish: config/fish
-    ~/.config/fontconfig: config/fontconfig
-    ~/.config/foot: config/foot
-    ~/.config/fuzzel: config/fuzzel
-    ~/.config/gtk-3.0: config/gtk-3.0
-    ~/.config/helix: config/helix
-    ~/.config/htop: config/htop
-    ~/.config/imv: config/imv
-    ~/.config/kanshi: config/kanshi
-    ~/.config/kitty: config/kitty
-    ~/.config/lf: config/lf
-    ~/.config/libinput-gestures.conf: utils/libinput-gestures.conf
-    ~/.config/mako: config/mako
-    ~/.config/mimeapps.list: config/mimeapps.list
-    ~/.config/mpv: config/mpv
-    ~/.config/ncdu: config/ncdu
-    ~/.config/neovide: config/neovide
-    ~/.config/niri: config/niri
-    ~/.config/nvim: config/nvim
-    ~/.config/pacman: config/pacman
-    ~/.config/ranger: config/ranger
-    ~/.config/rofi: config/rofi
-    ~/.config/sway: config/sway
-    ~/.config/swaylock: config/swaylock
-    ~/.config/systemd: config/systemd
-    ~/.config/tmux: config/tmux
-    ~/.config/tofi: config/tofi
-    ~/.config/translate-shell: config/translate-shell
-    ~/.config/waybar: config/waybar
-    ~/.config/wayfire.ini: config/wayfire.ini
-    ~/.config/wlogout: config/wlogout
-    ~/.config/wob: config/wob
-    ~/.config/wofi: config/wofi
-    ~/.config/xdg-terminals.list: config/xdg-terminals.list
-    ~/.config/yazi: config/yazi
+    ~/.config:
+      glob: true
+      path: config/*
     ~/.gitconfig: utils/.gitconfig
     ~/.local/bin: local/bin
     ~/.local/share/applications: local/share/applications
