--- a/config/nvim/.editorconfig
+++ b/config/nvim/.editorconfig
@@ -1,5 +1,7 @@
 root = true
 
-[*.lua]
-indent_style = tab
+[*]
+insert_final_newline = true
+indent_style = space
 indent_size = 2
+charset = utf-8
