chore(config): update to latest

--- a/config/sway/conf.d/input.conf
+++ b/config/sway/conf.d/input.conf
@@ -1,12 +1,14 @@
 ### Input
 input "type:keyboard" {
-		repeat_delay 500
-    repeat_rate 40
+	repeat_delay 200
+    repeat_rate 25
+	# TODO:
+	# sensitivity 0.5
 }
 
 input "type:touchpad" {
-		dwt enabled
-		## disable touchpad
+	dwt enabled
+	## disable touchpad
     # events disabled
     tap enabled
 }
