--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -19,9 +19,9 @@ ShowLayoutNameInIcon=True
 # 使用输入法的语言来显示文字
 UseInputMethodLanguageToDisplayText=True
 # 主题
-Theme=plasma
+Theme=breeze-opaque-light-blue
 # 深色主题
-DarkTheme=plasma
+DarkTheme=breeze-opaque-dark-blue
 # 跟随系统浅色/深色设置
 UseDarkTheme=True
 # 当被主题和桌面支持时使用系统的重点色
