--- a/config/fcitx5/conf/rime.conf
+++ b/config/fcitx5/conf/rime.conf
@@ -1,11 +1,11 @@
 # 预编辑模式
 PreeditMode="Composing text"
 # 共享输入状态
-InputState="Follow Global Configuration"
+InputState=All
 # 将嵌入式预编辑文本的光标固定在开头
 PreeditCursorPositionAtBeginning=True
 # 切换输入法时的行为
-SwitchInputMethodBehavior=Clear
+SwitchInputMethodBehavior="Commit commit preview"
 # 重新部署
 Deploy=
 # 同步
