--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -3,8 +3,19 @@
 <fontconfig>
 	<dir>~/.local/share/fonts</dir>
 	<dir>~/.fonts</dir>
+    <config>
+        <rescan><int>3600</int></rescan>
+    </config>
 	<!-- Rendering options -->
 	<match target="font">
+        <!-- 修整像素大小(小于10px的调整到10px，否则四舍五入到整数) -->
+        <edit name="pixelsize">
+            <if>
+                <less><name>pixelsize</name><double>10</double></less>
+                <int>10</int>
+                <round><name>pixelsize</name></round>
+            </if>
+        </edit>
 		<edit mode="assign" name="autohint">
 			<bool>false</bool>
 		</edit>
@@ -23,6 +34,12 @@
 		<edit mode="assign" name="rgba">
 			<const>rgb</const>
 		</edit>
+        <edit mode="assign" name="embeddedbitmap">
+            <bool>false</bool>
+        </edit>
+        <edit name="embolden" mode="assign">
+            <bool>false</bool>
+        </edit>
 	</match>
 	<!-- Default system-ui fonts -->
 	<match target="pattern">
@@ -59,7 +76,8 @@
 			<string>monospace</string>
 		</test>
 		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans Mono CJK SC</string>
+            <string>JetBrains Mono</string>
+			<string>Sarasa Mono SC</string>
 			<string>Symbols Nerd Font Mono</string>
 			<string>Twemoji</string>
 		</edit>
