--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,9 +1,9 @@
 # 垂直候选列表
-Vertical Candidate List=True
+Vertical Candidate List=False
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="Sans 10"
+Font="Sarasa Gothic SC 13"
 # 菜单字体
 MenuFont="Sans 10"
 # 托盘字体
@@ -19,13 +19,13 @@ ShowLayoutNameInIcon=True
 # 使用输入法的语言来显示文字
 UseInputMethodLanguageToDisplayText=True
 # 主题
-Theme=breeze-opaque-light-blue
+Theme=winter
 # 深色主题
-DarkTheme=breeze-opaque-dark-blue
+DarkTheme=winter
 # 跟随系统浅色/深色设置
 UseDarkTheme=True
 # 当被主题和桌面支持时使用系统的重点色
-UseAccentColor=True
+UseAccentColor=False
 # 在 X11 上针对不同屏幕使用单独的 DPI
 PerScreenDPI=True
 # 固定 Wayland 的字体 DPI
