--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -1,94 +1,120 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
-	<dir>~/.local/share/fonts</dir>
-	<dir>~/.fonts</dir>
-    <config>
-        <rescan><int>3600</int></rescan>
-    </config>
-	<!-- Rendering options -->
-	<match target="font">
-        <!-- 修整像素大小(小于10px的调整到10px，否则四舍五入到整数) -->
-        <edit name="pixelsize">
-            <if>
-                <less><name>pixelsize</name><double>10</double></less>
-                <int>10</int>
-                <round><name>pixelsize</name></round>
-            </if>
-        </edit>
-		<edit mode="assign" name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="hinting">
-			<bool>true</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle">
-			<const>hintslight</const>
-		</edit>
-		<edit mode="assign" name="antialias">
-			<bool>true</bool>
-		</edit>
-		<edit mode="assign" name="lcdfilter">
-			<const>lcddefault</const>
-		</edit>
-		<edit mode="assign" name="rgba">
-			<const>rgb</const>
-		</edit>
-        <edit mode="assign" name="embeddedbitmap">
-            <bool>false</bool>
-        </edit>
-        <edit name="embolden" mode="assign">
-            <bool>false</bool>
-        </edit>
-	</match>
-	<!-- Default system-ui fonts -->
-	<match target="pattern">
-		<test name="family" qual="any">
-			<string>system-ui</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>sans-serif</string>
-		</edit>
-	</match>
-	<!-- Default sans-serif fonts-->
-	<match target="pattern">
-		<test name="family" qual="any">
-			<string>sans-serif</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans</string>
-			<string>Twemoji</string>
-		</edit>
-	</match>
-	<!-- Default serif fonts-->
-	<match target="pattern">
-		<test name="family" qual="any">
-			<string>serif</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Serif</string>
-			<string>Twemoji</string>
-		</edit>
-	</match>
-	<!-- Default monospace fonts-->
-	<match target="pattern">
-		<test name="family" qual="any">
-			<string>monospace</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-            <string>JetBrains Mono</string>
-			<string>Sarasa Mono SC</string>
-			<string>Symbols Nerd Font Mono</string>
-			<string>Twemoji</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test compare="contains" name="family">
-			<string>Twemoji mozilla</string>
-		</test>
-		<edit binding="strong" name="family">
-			<string>Twemoji</string>
-		</edit>
-	</match>
+ <dir>~/.local/share/fonts</dir>
+ <dir>~/.fonts</dir>
+ <config>
+  <rescan>
+   <int>3600</int>
+  </rescan>
+ </config>
+ <!-- Rendering options -->
+ <match target="font">
+  <!-- 修整像素大小(小于10px的调整到10px，否则四舍五入到整数) -->
+  <edit name="pixelsize">
+   <if>
+    <less>
+     <name>pixelsize</name>
+     <double>10</double>
+    </less>
+    <int>10</int>
+    <round>
+     <name>pixelsize</name>
+    </round>
+   </if>
+  </edit>
+  <edit mode="assign" name="autohint">
+   <bool>false</bool>
+  </edit>
+  <edit mode="assign" name="hinting">
+   <bool>true</bool>
+  </edit>
+  <edit mode="assign" name="hintstyle">
+   <const>hintslight</const>
+  </edit>
+  <edit mode="assign" name="antialias">
+   <bool>true</bool>
+  </edit>
+  <edit mode="assign" name="lcdfilter">
+   <const>lcddefault</const>
+  </edit>
+  <edit mode="assign" name="rgba">
+   <const>rgb</const>
+  </edit>
+  <edit mode="assign" name="embeddedbitmap">
+   <bool>false</bool>
+  </edit>
+  <edit mode="assign" name="embolden">
+   <bool>false</bool>
+  </edit>
+ </match>
+ <!-- Default system-ui fonts -->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>system-ui</string>
+  </test>
+  <edit binding="strong" mode="prepend" name="family">
+   <string>sans-serif</string>
+  </edit>
+ </match>
+ <!-- Default sans-serif fonts-->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>sans-serif</string>
+  </test>
+  <edit binding="strong" mode="prepend" name="family">
+   <string>Noto Sans</string>
+   <string>Twemoji</string>
+  </edit>
+ </match>
+ <!-- Default serif fonts-->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>serif</string>
+  </test>
+  <edit binding="strong" mode="prepend" name="family">
+   <string>Noto Serif</string>
+   <string>Twemoji</string>
+  </edit>
+ </match>
+ <!-- Default monospace fonts-->
+ <match target="pattern">
+  <test name="family" qual="any">
+   <string>monospace</string>
+  </test>
+  <edit binding="strong" mode="prepend" name="family">
+   <string>JetBrains Mono</string>
+   <string>Symbols Nerd Font Mono</string>
+   <string>Twemoji</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test compare="contains" name="family">
+   <string>Twemoji mozilla</string>
+  </test>
+  <edit binding="strong" name="family">
+   <string>Twemoji</string>
+  </edit>
+ </match>
+ <match target="font">
+  <edit mode="assign" name="rgba">
+   <const>rgb</const>
+  </edit>
+ </match>
+ <match target="font">
+  <edit mode="assign" name="hinting">
+   <bool>true</bool>
+  </edit>
+ </match>
+ <match target="font">
+  <edit mode="assign" name="hintstyle">
+   <const>hintslight</const>
+  </edit>
+ </match>
+ <match target="font">
+  <edit mode="assign" name="antialias">
+   <bool>true</bool>
+  </edit>
+ </match>
 </fontconfig>
 <!-- vim: set ft=xml fdm=marker: -->
