--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,3 +1,6 @@
+include ./theme/onedark.conf
+
+# Misc
 confirm_os_window_close 0
 
 # Window
@@ -5,13 +8,17 @@ remember_window_size no
 initial_window_width 120c
 initial_window_height 30c
 
-# Font
-font_size 13.0
-font_family family "monospace"
-
 # Theme
-background_opacity 0.75
+# background_opacity 0.65
 background_blur 16
 
 # Performance
 sync_to_monitor yes
+
+# BEGIN_KITTY_FONTS
+font_size 11.0
+font_family      family="JetBrains Mono"
+bold_font        auto
+italic_font      family="Iosevka Nerd Font Mono"
+bold_italic_font auto
+# END_KITTY_FONTf
