--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=DP-2,2560x1440@60,-2560x-1440,2
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = yazi
 $menu = fuzzel
 
@@ -27,8 +27,13 @@ $menu = fuzzel
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = ~/.config/hypr/scripts/xdg.sh
+exec-once = ~/.config/hypr/scripts/gtk.sh
+
+exec-once = hyprpaper
 exec-once = waybar
 
+exec = env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 
@@ -39,7 +44,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,breeze_cursors
 env = ELECTRON_OZONE_PLATFORM_HINT,auto # for electron wayland
 
 
