--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,17 +1,15 @@
 font-size = 13
 font-family = "JetBrains Mono"
 
-cursor-style = block
-
-adjust-cell-height = 1
+adjust-cell-height = 20%
 
 window-width = 120
-window-height = 30
-
+window-height = 26
 window-padding-balance = true
+
+confirm-close-surface = false
 
 gtk-titlebar = false
 gtk-adwaita = false
 
 auto-update = off
-
