--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -1,3 +1,4 @@
+--password-store=detect
 --ozone-platform-hint=auto
 --enable-features=WaylandWindowDecorations
 --enable-features=WebRTCPipeWireCapturer
