--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./theme/onedark.conf
+include ./theme/oxocarbon.conf
 
 # Misc
 confirm_os_window_close 0
@@ -16,9 +16,9 @@ background_blur 16
 sync_to_monitor yes
 
 # BEGIN_KITTY_FONTS
-font_size 11.0
+font_size 13.0
 font_family      family="JetBrains Mono"
 bold_font        auto
-italic_font      family="Iosevka Nerd Font Mono"
+italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTf
