--- a/util/winter/theme.conf
+++ b/util/winter/theme.conf
@@ -11,7 +11,7 @@ Font=Sans 13
 # 非选中候选字颜色
 NormalColor=#ffffff
 # 选中候选字颜色
-HighlightCandidateColor=#ffffff
+HighlightCandidateColor=#ee5396
 # 高亮前景颜色(输入字符颜色)
 HighlightColor=#ffffff
 # 输入字符背景颜色
@@ -31,6 +31,7 @@ Bottom=10
 
 [InputPanel/Background]
 Image=panel.png
+Color=#161616
 
 [InputPanel/Background/Margin]
 Left=2
@@ -39,7 +40,7 @@ Top=2
 Bottom=2
 
 [InputPanel/Highlight]
-Color=#1D66CD
+Color=#525252
 
 [InputPanel/Highlight/Margin]
 # 高亮区域左边距
