--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,35 +1,35 @@
-# 垂直候选列表
+# Vertical Candidate List
 Vertical Candidate List=False
-# 使用鼠标滚轮翻页
+# Use mouse wheel to go to prev or next page
 WheelForPaging=True
-# 字体
+# Font
 Font="Sarasa Gothic SC 13"
-# 菜单字体
+# Menu Font
 MenuFont="Sans 10"
-# 托盘字体
+# Tray Font
 TrayFont="Sans Bold 10"
-# 托盘标签轮廓颜色
+# Tray Label Outline Color
 TrayOutlineColor=#000000
-# 托盘标签文本颜色
+# Tray Label Text Color
 TrayTextColor=#ffffff
-# 优先使用文字图标
+# Prefer Text Icon
 PreferTextIcon=False
-# 在图标中显示布局名称
+# Show Layout Name In Icon
 ShowLayoutNameInIcon=True
-# 使用输入法的语言来显示文字
+# Use input method language to display text
 UseInputMethodLanguageToDisplayText=True
-# 主题
-Theme=winter
-# 深色主题
-DarkTheme=winter
-# 跟随系统浅色/深色设置
+# Theme
+Theme=breeze-opaque-dark-blue
+# Dark Theme
+DarkTheme=breeze-opaque-dark-blue
+# Follow system light/dark color scheme
 UseDarkTheme=True
-# 当被主题和桌面支持时使用系统的重点色
+# Follow system accent color if it is supported by theme and desktop
 UseAccentColor=False
-# 在 X11 上针对不同屏幕使用单独的 DPI
+# Use Per Screen DPI on X11
 PerScreenDPI=True
-# 固定 Wayland 的字体 DPI
+# Force font DPI on Wayland
 ForceWaylandDPI=96
-# 在 Wayland 下启用分数缩放
+# Enable fractional scale under Wayland
 EnableFractionalScale=False
 
