--- a/config/fcitx5/conf/clipboard.conf
+++ b/config/fcitx5/conf/clipboard.conf
@@ -1,8 +1,13 @@
-# 粘贴主选区
+# Trigger Key
+TriggerKey=
+# Paste Primary
 PastePrimaryKey=
-# 项目个数
+# Number of entries
 Number of entries=5
-
-[TriggerKey]
-0=Super+V
+# Do not show password from password managers
+IgnorePasswordFromPasswordManager=False
+# Hidden clipboard content that contains a password
+ShowPassword=False
+# Seconds before clearing password
+ClearPasswordAfter=30
 
