--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=DP-2,2560x1440@60,-2560x-1440,2
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = kitty
 $fileManager = yazi
 $menu = fuzzel
 
@@ -27,10 +27,10 @@ $menu = fuzzel
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = ~/.config/hypr/scripts/xdg.sh
 exec-once = ~/.config/hypr/scripts/gtk.sh
+exec-once = ~/.config/hypr/scripts/xdg.sh
 
-exec-once = hyprpaper
+exec-once = hyprpaper && hypridel
 exec-once = waybar
 
 exec = env LANG=zh_CN.UTF-8 fcitx5 -d --replace
