--- a/config/kanshi/config
+++ b/config/kanshi/config
@@ -1,5 +1,3 @@
-profile {
+profile default {
 	output eDP-1 mode 2880x1800@90 scale 2 position 0,0
-	output DP-2 mode 2560x1440@60 scale 1.25 position 0,-1440
-	exec swaymsg workspace 10, move workspace to DP-3
 }
