--- a/config/mako/config
+++ b/config/mako/config
@@ -1,29 +1,27 @@
+sort=-time
 layer=overlay
-font=sans 10
-background-color=#4F4F4FFF
-text-color=#FFFFFFE6
-border-color=#4F4F4FFF
-border-radius=4
-width=300
-height=100
-outer-margin=0,0,0,0
-margin=4
-
-anchor=top-right
-
+background-color=#22222266
+width=450
+height=150
+border-size=1
+border-color=#d3e4c9
+border-radius=12
+icons=1
+max-icon-size=64
 default-timeout=5000
 ignore-timeout=0
+font=Noto Sans CJK TC 14
+margin=12
+padding=12,20
 
-max-visible=1
+[urgency=low]
+border-color=#aaaaaa
 
-[urgency=high]
-text-color=#ff5c57ff
-border-color=#ff5c57bb
+[urgency=normal]
+border-color=#cceeff
 
-[mode=locked]
-layer=top
-
-[mode=dnd]
-invisible=1
+[urgency=critical]
+border-color=#ff7777
+default-timeout=0
 
 # vim: set ft=dosini:
