--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,12 +1,25 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
-# Inserts a blank line between shell prompts
 add_newline = false
+
+[gcloud]
+disabled = true
+
+[direnv]
+disabled = true
 
 # Replace the '❯' symbol in the prompt with '➜'
 [character] # The name of the module we are configuring is 'character'
-success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+# symbol = "[I]➜"
+success_symbol = "[I ➜](bold green)"
+error_symbol = "[I ➜](bold red)"
+vimcmd_symbol = "[N ➜](bold green)"
+vimcmd_replace_one_symbol = "[R ➜](bold green)"
+vimcmd_replace_symbol = "[R ➜](bold green)"
+vimcmd_visual_symbol = "[V ➜](bold green)"
+
+# icons
 
 [aws]
 symbol = " "
@@ -157,7 +170,6 @@ symbol = " "
 
 [python]
 symbol = " "
-detect_folders = [ '.venv' ]
 
 [rlang]
 symbol = "󰟔 "
