--- a/config/systemd/user/onedrive.service
+++ b/config/systemd/user/onedrive.service
@@ -3,7 +3,7 @@ Description=Rclone mount Onedrive service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/rclone mount Onedrive:/ /home/iFlygo/Documents/Onedrive --vfs-cache-mode full --vfs-cache-max-age 240h --vfs-cache-max-size 15G --vfs-read-chunk-size-limit off --buffer-size 100M
+ExecStart=/usr/bin/rclone mount Onedrive:/ /home/iFlygo/Documents/Onedrive --vfs-cache-mode full --vfs-cache-max-age 240h --vfs-cache-max-size 5G --vfs-read-chunk-size-limit off --buffer-size 100M --allow-non-empty
 Restart=always
 
 [Install]
