--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,20 +7,20 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "assistant": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "gpt-4"
+    },
+    "version": "2"
+  },
   "telemetry": {
     "metrics": false,
     "diagnostics": false
   },
   "vim_mode": true,
-  "assistant": {
-    "default_model": {
-      "provider": "google",
-      "model": "gemini-1.5-pro"
-    },
-    "version": "2"
-  },
   "features": {
-    "inline_completion_provider": "supermaven"
+    "inline_completion_provider": "zeta"
   },
   "theme": {
     "mode": "system",
