--- a/rime/default.custom.yaml
+++ b/rime/default.custom.yaml
@@ -1,8 +1,9 @@
 patch:
   schema_list:
-    - schema: double_pinyin          # 自然码双拼
+    - schema: double_pinyin
+    - schema: rime_ice
   ascii_composer/switch_key/+:
-    Shift_L: inline_ascii # commit_code | commit_text | inline_ascii | clear | noop
+    Shift_L: commit_code # commit_code | commit_text | inline_ascii | clear | noop
   punctuator/half_shape/+:
     "'": { pair: ["「", "」"] }
     '"': { pair: ["『", "』"] }
