chore: 为electron应用启用text-input-v3

--- a/config/microsoft-edge-stable-flags.conf
+++ b/config/microsoft-edge-stable-flags.conf
@@ -3,3 +3,4 @@
 --enable-features=WaylandWindowDecorations
 --enable-features=WebRTCPipeWireCapturer
 --enable-wayland-ime
+--wayland-text-input-version=3
