chore: Update various configuration files
- Removed commented out "vi" command from Atuin config
- Updated Fcitx5 config with Chinese comments and font changes
- Adjusted Fish shell aliases and update function
- Added new fonts to Fontconfig
- Modified Ghostty and Kitty terminal configs
- Added Podman Desktop to MIME apps
- Updated MPV player configurations and scripts
- Simplified Neovim initialization and updated plugins
- Adjusted Sway and Waybar configurations
- Updated Zed editor settings
- Updated Rime Ice submodule

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -64,7 +64,10 @@
   </test>
   <edit binding="strong" mode="prepend" name="family">
    <string>Noto Sans</string>
+   <string>Symbols Nerd Font</string>
    <string>Twemoji</string>
+   <string>Font Awesome 6 Free</string>
+   <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <!-- Default serif fonts-->
@@ -74,7 +77,10 @@
   </test>
   <edit binding="strong" mode="prepend" name="family">
    <string>Noto Serif</string>
+   <string>Symbols Nerd Font</string>
    <string>Twemoji</string>
+   <string>Font Awesome 6 Free</string>
+   <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <!-- Default monospace fonts-->
@@ -84,36 +90,19 @@
   </test>
   <edit binding="strong" mode="prepend" name="family">
    <string>JetBrains Mono</string>
+   <string>LXGW WenKai Mono</string>
    <string>Symbols Nerd Font Mono</string>
    <string>Twemoji</string>
+   <string>Font Awesome 6 Free</string>
+   <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <match target="pattern">
   <test compare="contains" name="family">
-   <string>Twemoji mozilla</string>
+   <string>Twemoji</string>
   </test>
   <edit binding="strong" name="family">
-   <string>Twemoji</string>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="rgba">
-   <const>rgb</const>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="hinting">
-   <bool>true</bool>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="hintstyle">
-   <const>hintslight</const>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="antialias">
-   <bool>true</bool>
+   <string>Twemoji mozilla</string>
   </edit>
  </match>
 </fontconfig>
