--- a/config/sway/conf.d/exec.conf
+++ b/config/sway/conf.d/exec.conf
@@ -1,6 +1,9 @@
 # autostart background applications
 exec /usr/lib/polkit-kde-authentication-agent-1
 
+# KDE wallet
+exec --no-startup-id /usr/lib/pam_kwallet_init
+
 exec_always wm-gsetting
 exec_always swaybg -i $HOME/Pictures/wallpapers/1.jpg -m fill
 exec_always env LANG=zh_CN.UTF-8 fcitx5 -d --replace
