--- a/config/sway/config
+++ b/config/sway/config
@@ -8,14 +8,14 @@ set $TOP htop
 set $FMANAGER yazi
 set $RECORDER wf-recorder
 
-xwayland disable
+# xwayland disable
 
 ### General
 gaps inner 0
 gaps outer 1
 smart_borders on
 default_border pixel 1
-workspace_auto_back_and_forth yes
+workspace_auto_back_and_forth no
 
 include ~/.config/sway/conf.d/*
 
