--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,10 +7,11 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "icon_theme": "Material Icon Theme",
   "assistant": {
     "default_model": {
       "provider": "copilot_chat",
-      "model": "gpt-4"
+      "model": "gpt-4o"
     },
     "version": "2"
   },
@@ -20,11 +21,16 @@
   },
   "vim_mode": true,
   "features": {
-    "inline_completion_provider": "zeta"
+    "edit_prediction_provider": "zed"
   },
   "theme": {
     "mode": "system",
-    "light": "One Dark",
+    "light": "One Light",
     "dark": "One Dark"
+  },
+  "terminal": {
+    "toolbar": {
+      "breadcrumbs": false
+    }
   }
 }
