chore: update to latest

--- a/config/fuzzel/fuzzel.ini
+++ b/config/fuzzel/fuzzel.ini
@@ -9,7 +9,7 @@ icon-theme=WhiteSur
 # filter-desktop=no
 # fuzzy=yes
 # show-actions=no
-# terminal=$TERMINAL -e  # Note: you cannot actually use environment variables here
+terminal=xdg-terminal-exec  # Note: you cannot actually use environment variables here
 # launch-prefix=<not set>
 # list-executables-in-path=no
 
