--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,7 +7,7 @@ initial_window_width 120c
 initial_window_height 30c
 
 # Theme
-# background_opacity 0.65
+background_opacity 0.85
 background_blur 16
 
 # Performance
@@ -15,8 +15,8 @@ sync_to_monitor yes
 
 # BEGIN_KITTY_FONTS
 font_size 13.0
-font_family      family="JetBrains Mono"
+font_family      family='Maple Mono' postscript_name=MapleMono-Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-# END_KITTY_FONTf
+# END_KITTY_FONTS
