--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -15,9 +15,11 @@ ActivateKeys=
 DeactivateKeys=
 # Toggle embedded preedit
 TogglePreedit=
+# Time limit in milliseconds for triggering modifier key shortcuts
+ModifierOnlyKeyTimeout=250
 
 [Hotkey/TriggerKeys]
-0=Shift+Shift_L
+0=Control+Shift+Shift_L
 
 [Hotkey/EnumerateGroupForwardKeys]
 0=Super+space
