chore(mpv): 更新 Windows 平台配置

--- a/config/mpv/mpv_windows.conf
+++ b/config/mpv/mpv_windows.conf
@@ -5,10 +5,10 @@ autofit-larger=70%x70%
 # ===== Video =====
 profile         = gpu-hq
 hwdec-codecs    = all
-hwdec           = vaapi  # <vaapi|vulkan>
+hwdec           = auto-safe
 gpu-api         = vulkan
-gpu-context     = waylandvk
-vo              = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
+gpu-context     = d3d11
+vo              = gpu
 vf              = format:dolbyvision=yes
 # ===== OSD =====
 osc                   = no
