--- a/windows.conf.yaml
+++ b/windows.conf.yaml
@@ -10,9 +10,10 @@
     ~/.cargo/config.toml: config/cargo/config.toml
     ~/AppData/Local/nvim: config/nvim
     ~/AppData/Roaming/mpv:
-      path: config/mpv
+      glob: true
+      path: config/mpv/*
       exclude: config/mpv/mpv_*.conf
-    ~/AppData/Roaming/mpv/mpv.conf: config/mpv/mpv.conf
+    ~/AppData/Roaming/mpv/mpv.conf: config/mpv/mpv_windows.conf
     ~/AppData/Roaming/Rime: submodules/rime-ice
     ~/AppData/Roaming/Rime/:
       glob: true
