--- a/windows.conf.yaml
+++ b/windows.conf.yaml
@@ -11,9 +11,9 @@
     ~/AppData/Local/nvim: config/nvim
     ~/AppData/Roaming/mpv:
       glob: true
-      path: config/mpv/*
-      exclude: config/mpv/mpv_*.conf
-    ~/AppData/Roaming/mpv/mpv.conf: config/mpv/mpv_windows.conf
+      path: config/mpv
+      exclude: [config/mpv/conf.d]
+    ~/AppData/Roaming/mpv/mpv.conf: config/mpv/conf.d/mpv_windows.conf
     ~/AppData/Roaming/Rime: submodules/rime-ice
     ~/AppData/Roaming/Rime/:
       glob: true
