--- a/windows.conf.yaml
+++ b/windows.conf.yaml
@@ -7,6 +7,7 @@
 - clean: ["~"]
 
 - link:
+    ~/.gitconfig: config/git/config
     ~/.cargo/config.toml: config/cargo/config.toml
     ~/AppData/Local/nvim: config/nvim
     ~/AppData/Roaming/mpv:
