--- a/config/xdg-desktop-portal/niri-portals.conf
+++ b/config/xdg-desktop-portal/niri-portals.conf
@@ -1,2 +1,4 @@
 [preferred]
-default=kde
+default=kde;gnome;gtk;
+org.freedesktop.impl.portal.ScreenCast=gnome;gtk;
+org.freedesktop.impl.portal.Screenshot=gnome;gtk;
