chore(zed): add zed settings

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -14,7 +14,8 @@
     },
     "version": "2"
   },
-  "buffer_font_family": "JetBrains Mono",
+  "buffer_font_family": "Maple Mono",
+  "ui_font_family": "Inter",
   "telemetry": {
     "metrics": false,
     "diagnostics": false
@@ -22,6 +23,16 @@
   "vim_mode": true,
   "features": {
     "edit_prediction_provider": "zed"
+  },
+  "git": {
+    "inline_blame": {
+      "enabled": false
+    }
+  },
+  "scrollbar": {
+    "axes": {
+      "horizontal": false
+    }
   },
   "theme": {
     "mode": "system",
