--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -56,13 +56,13 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.local/state/tmux/plugins'
 
 # 推荐的插件（请去每个插件的仓库下读一读使用教程）
-# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin 'tmux-plugins/tmux-pain-control'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-resurrect
 set -g @resurrect-dir '~/.local/state/tmux/resurrect'
