chore(mpv): 新增 bilibili 弹幕转 ass 脚本

--- a/config/mpv/conf.d/mpv_linux.conf
+++ b/config/mpv/conf.d/mpv_linux.conf
@@ -1,3 +1,7 @@
+# 让弹幕更平滑
+# 与补帧插件冲突，启用补帧插件就不用加这个
+# 注意这行尽量放配置文件的前面，最好放第一个
+vf=lavfi="fps=fps=90/1.001"
 # ===== Terminal =====
 cursor-autohide-fs-only = yes # don't autohide the cursor in window mode, only fullscreen
 term-osd-bar            = yes # displays a progress bar on the terminal
@@ -9,7 +13,7 @@ hwdec           = vaapi  # <vaapi|vulkan>
 gpu-api         = vulkan
 gpu-context     = waylandvk
 vo              = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
-vf              = format:dolbyvision=yes
+vd-lavc-dr         = auto           # <默认auto|yes|no> 是否直接解码到显存，个别低端英特尔处理器可能需要显式禁用此功能以大幅提速解码
 # ===== OSD =====
 osc                   = no
 border                = no
