feat(fontconfig): Sans 字体优先使用 OPPO Sans 和 Inter。

--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
+    <match target="pattern">
+    <test name="family">
+      <string>OPPO Sans</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>OPPO Sans 4.0</string>
+    </edit>
+  </match>
 	<match target="pattern">
 		<test name="family">
 			<string>Simsun</string>
