--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -63,6 +63,8 @@
    <string>sans-serif</string>
   </test>
   <edit binding="strong" mode="prepend" name="family">
+   <string>Inter</string>
+   <string>OPPO Sans</string>
    <string>Noto Sans</string>
    <string>Symbols Nerd Font</string>
    <string>Twemoji</string>
@@ -76,6 +78,7 @@
    <string>serif</string>
   </test>
   <edit binding="strong" mode="prepend" name="family">
+   <string>LXGW WenKai</string>
    <string>Noto Serif</string>
    <string>Symbols Nerd Font</string>
    <string>Twemoji</string>
