feat(fuzzel): fuzzel 启动的软件都使用 systemd-run 来启动

--- a/config/fuzzel/fuzzel.ini
+++ b/config/fuzzel/fuzzel.ini
@@ -10,7 +10,7 @@ icon-theme=WhiteSur
 # fuzzy=yes
 # show-actions=no
 terminal=xdg-terminal-exec # Note: you cannot actually use environment variables here
-# launch-prefix=<not set>
+launch-prefix=fuzzel-wrapper.sh
 # list-executables-in-path=no
 
 # anchor=center
