feat(mpv): 分离预设组

--- a/config/mpv/conf.d/mpv_linux.conf
+++ b/config/mpv/conf.d/mpv_linux.conf
@@ -108,6 +108,9 @@ osd-outline-size         = 1.65        # OSD 轮廓尺寸，默认 1.65
 osd-color                = "#FFFFFFFF" # <格式为(AA)RRGGBB> OSD 颜色
 osd-fractions            = no          # 以秒为单位显示OSD时间（毫秒精度），有助于查看视频帧的确切时间戳，默认 no
 
+# 终端 {{{1
+quiet # avoid taking a lot of CPU on the terminal when network data is cached
+
 # 音频 {{{1
 
 ao                     = wasapi,pipewire
@@ -308,34 +311,5 @@ screenshot-template           = "mpv-shot%n"
                                      # 示例即默认值。可额外选填路径，例值 "~~desktop/MPV-%P-N%n"
 screenshot-dir                =
                                      # [若已在截图命名模板中设置路径，此时无需使用该选项 ] 默认为空，例值（保存截图在桌面） "~~desktop/"
-# end }}}1
 
-[Bilibili]
-profile-desc = Bilibili videos
-profile-cond = path:match("https://www.bilibili.com")~=nil
-profile-restore=copy
-ytdl-raw-options = cookies-from-browser=firefox
-vf=lavfi="fps=fps=90"
-
-[Bilibili-live]
-profile-desc = Bilibili live videos
-profile-cond = path:match("https://live.bilibili.com")~=nil
-profile-restore = copy
-ytdl-raw-options = cookies-from-browser=firefox
-# mpegts hevc 原画 / flv avc 原画 / ...
-ytdl-format = source-7/source-0/source
-autofit-larger=70%x70%
-
-[Tencent]
-profile-desc = Tencent videos
-profile-cond = path:match("https://v.qq.com")~=nil
-profile-restore=copy
-ytdl-raw-options = cookies-from-browser=firefox
-
-[Music]
-script-opts-append=playlistmanager-loadfiles_filetypes=["gif","mp3","wav","ogm","flac","m4a","wma","ogg","opus","mkv","avi","mp4","ogv","webm","rmvb","flv","wmv","mpeg","mpg","m4v","3gp"]
-video-sync=audio
-autofit-larger=50%x60%
-loop-playlist=inf
-
-# vim: fdm=marker
+# vim: ft=dosini fdm=marker
