--- a/config/mpv/profiles.conf
+++ b/config/mpv/profiles.conf
@@ -57,3 +57,32 @@
 #sub-back-color = "#00000000"
 #sub-shadow-offset = 0
 
+[Bilibili]
+profile-desc = Bilibili videos
+profile-cond = path:match("https://www.bilibili.com")~=nil
+profile-restore=copy
+ytdl-raw-options = cookies-from-browser=firefox
+vf=lavfi="fps=fps=90"
+
+[Bilibili-live]
+profile-desc = Bilibili live videos
+profile-cond = path:match("https://live.bilibili.com")~=nil
+profile-restore = copy
+ytdl-raw-options = cookies-from-browser=firefox
+# mpegts hevc 原画 / flv avc 原画 / ...
+ytdl-format = source-7/source-0/source
+autofit-larger=70%x70%
+
+[Tencent]
+profile-desc = Tencent videos
+profile-cond = path:match("https://v.qq.com")~=nil
+profile-restore=copy
+ytdl-raw-options = cookies-from-browser=firefox
+
+[Music]
+script-opts-append=playlistmanager-loadfiles_filetypes=["gif","mp3","wav","ogm","flac","m4a","wma","ogg","opus","mkv","avi","mp4","ogv","webm","rmvb","flv","wmv","mpeg","mpg","m4v","3gp"]
+video-sync=audio
+autofit-larger=50%x60%
+loop-playlist=inf
+
+# vim: ft=dosini fdm=marker
