feat(nvim): 添加 Windows 隐藏启动 bat

--- a/config/nvim/snippets/package.json
+++ b/config/nvim/snippets/package.json
@@ -10,6 +10,12 @@
           "markdown"
         ],
         "path": "./obsidian.json"
+      },
+      {
+        "language": [
+          "bat"
+        ],
+        "path": "./bat.json"
       }
     ]
   }
