feat: update awesome font
fix some issues

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -63,10 +63,11 @@
       <string>sans-serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <string>DejaVu Sans</string>
       <string>Noto Sans</string>
       <string>Twemoji</string>
-      <string>Font Awesome 6 Free</string>
-      <string>Font Awesome 6 Brands</string>
+      <string>Font Awesome 7 Free</string>
+      <string>Font Awesome 7 Brands</string>
     </edit>
   </match>
   <!-- Default serif fonts-->
@@ -75,10 +76,11 @@
       <string>serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <string>DejaVu Serif</string>
       <string>Noto Serif</string>
       <string>Twemoji</string>
-      <string>Font Awesome 6 Free</string>
-      <string>Font Awesome 6 Brands</string>
+      <string>Font Awesome 7 Free</string>
+      <string>Font Awesome 7 Brands</string>
     </edit>
   </match>
   <!-- Default monospace fonts-->
@@ -87,22 +89,31 @@
       <string>monospace</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <!-- Nerd Font Mono 版本可能会显示较小 -->
-      <!-- https://github.com/neovide/neovide/issues/1135 -->
-      <string>JetBrains Mono</string>
-      <string>Symbols Nerd Font</string>
+      <string>DejaVu Sans Mono</string>
       <string>Noto Sans</string>
       <string>Twemoji</string>
       <string>Font Awesome 7 Free</string>
       <string>Font Awesome 7 Brands</string>
     </edit>
   </match>
+  <!-- Other fonts -->
   <match target="pattern">
     <test compare="contains" name="family">
       <string>Twemoji</string>
     </test>
     <edit binding="strong" name="family">
       <string>Twemoji Mozilla</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>JetBrains Mono</string>
+    </test>
+    <edit binding="same" name="family">
+      <!-- Nerd Font Mono 版本可能会显示较小 -->
+      <!-- https://github.com/neovide/neovide/issues/1135 -->
+      <string>JetBrains Mono</string>
+      <string>Symbols Nerd Font</string>
     </edit>
   </match>
 </fontconfig><!-- vim: set ft=xml fdm=marker: -->
